RESOLVED FIXED236318
Don't return an empty value from AbortController.signal.reason and make it harder to return empty values from JSValueInWrappedObject
https://bugs.webkit.org/show_bug.cgi?id=236318
Summary Don't return an empty value from AbortController.signal.reason and make it ha...
Saam Barati
Reported 2022-02-08 11:34:21 PST
Attachments
patch (17.75 KB, patch)
2022-02-08 19:48 PST, Saam Barati
mark.lam: review+
ews-feeder: commit-queue-
patch for landing (17.71 KB, patch)
2022-02-08 20:34 PST, Saam Barati
no flags
patch for landing (17.71 KB, patch)
2022-02-08 20:35 PST, Saam Barati
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-08 11:35:10 PST
Saam Barati
Comment 2 2022-02-08 19:48:35 PST
Mark Lam
Comment 3 2022-02-08 20:00:22 PST
Comment on attachment 451336 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=451336&action=review > Source/WebCore/bindings/js/JSValueInWrappedObject.h:-47 > - operator JSC::JSValue() const; Maybe make this private so that the compiler complains if someone tries to cast? > Source/WebCore/bindings/js/JSValueInWrappedObject.h:83 > + if (m_nonCell) > + return true; > + return !!m_cell; You can express this as: return m_nonCell || m_cell;
Mark Lam
Comment 4 2022-02-08 20:01:33 PST
Comment on attachment 451336 [details] patch r=me
Saam Barati
Comment 5 2022-02-08 20:34:22 PST
Created attachment 451337 [details] patch for landing
Saam Barati
Comment 6 2022-02-08 20:35:26 PST
Created attachment 451338 [details] patch for landing
EWS
Comment 7 2022-02-09 01:17:11 PST
Committed r289462 (247005@main): <https://commits.webkit.org/247005@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451338 [details].
Note You need to log in before you can comment on or make changes to this bug.